--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
             android:orientation="vertical">
             <ImageView
             android:layout_width="200dp"
+            android:id="@+id/imalogomap1"
             android:layout_height="70dp"
             app:srcCompat="@drawable/logov2" />
             <TextView
@@ -39,9 +40,6 @@
                 android:gravity="center"
                 android:background="@drawable/rounded_corner"
                 android:padding="5dp"
-
-
-
             android:text="200XP" />
 
 
@@ -87,7 +85,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="20dp"
-                app:srcCompat="@drawable/GLOBE2" />
+                app:srcCompat="@drawable/glob2" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
