--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -62,7 +62,10 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:gravity="start"
-       android:layout_margin="20dp"
+       android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="0dp"
