--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,15 +7,26 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
 
+
     <color name="primary">#1A8C0F</color>
     <color name="secondary">#01B5EA</color>
     <color name="tertiary">#F0C513</color>
     <color name="primaryLight">#61AD58</color>
-    <color name="secndaryLight">#A6E7FB</color>
+    <color name="secondaryLight">#A6E7FB</color>
     <color name="greenPepslight">#D3F5E4</color>
     <color name="greenPeps">#2CD688</color>
     <color name="greyDark">#515151</color>
     <color name="greyLight">#B4B4B4</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="style1">@color/primary</color>
+    <color name="style2">@color/white</color>
+    <color name="style3">@color/greyDark</color>
+    <color name="style4">@color/primary</color>
+    <color name="style5">@color/secondary</color>
+    <color name="style6">@color/greyDark</color>
+    <color name="Style7">@color/primary</color>
+
+
 
 </resources>
