--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
                 android:gravity="center"
                 android:layout_marginHorizontal="50dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/NunitoBlack"
+                android:fontFamily="@font/nunitoblack"
                 android:textSize="15dp"
                 android:text="@string/home_message" />
         </LinearLayout>
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/button_primary"
                 android:onClick="onClick"
-                android:fontFamily="@font/Hobeaux"
+                android:fontFamily="@font/hobeaux"
                 android:textSize="25dp"
                 android:text="@string/play_message" />
         </LinearLayout>
