--- a/app/src/main/res/layout/activity_gallery_foodies.xml
+++ b/app/src/main/res/layout/activity_gallery_foodies.xml
@@ -8,9 +8,147 @@
     android:background="@drawable/fond_menu"
     tools:context=".GalleryFoodiesActivity">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Galerie foodies activité" />
+        android:layout_margin="20dp"
+        android:orientation="horizontal"
+        android:baselineAligned="false">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:layout_weight="2"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="200dp"
+                android:id="@+id/imalogomap1"
+                android:layout_height="70dp"
+                app:srcCompat="@drawable/logov2" />
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_corner"
+                android:fontFamily="@font/style5"
+                android:gravity="center"
+                android:padding="5dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/score_initial"
+                android:textColor="@color/secondary"
+                android:textSize="18sp"
+                />
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+
+            android:gravity="end" >
+            <ImageView
+                android:id="@+id/menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:onClick="onClick"
+                app:srcCompat="@drawable/menu" />
+        </LinearLayout>
+
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/foodies"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_margin="20dp"
+        android:background="@drawable/rounded_corner"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="10dp"
+        android:backgroundTint="#C4F4DE"
+        android:onClick="onClick"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/style4"
+            android:textColor="@color/style4"
+            android:textSize="@dimen/style4"
+
+            android:text="Foodies" />
+
+
+    </LinearLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="0,1"
+        >
+
+        <TableRow
+            android:layout_width="fill_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+
+            android:orientation="vertical"
+            android:layout_marginHorizontal="20dp"
+
+            android:background="@drawable/rounded_corner"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="10dp"
+            android:backgroundTint="#C4F4DE" >
+
+        </LinearLayout>
+
+        <!-- BALISE -->
+        </TableRow>
+        <TableRow
+            android:layout_width="fill_parent">
+            <!-- BALISE -->
+
+            <!-- BALISE -->
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent">
+            <!-- BALISE -->
+
+            <!-- BALISE -->
+        </TableRow>
+
+
+
+
+
+
+    </TableLayout>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnCount="2"
+        android:isScrollContainer="true"
+        android:rowCount="3"
+        android:orientation="horizontal"
+        android:layout_margin="20dp">
+
+        <androidx.fragment.app.FragmentContainerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/fragment_container_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </GridLayout>
+
+
 </LinearLayout>
