creation du fragment MapsActivity

--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -98,16 +98,18 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="460dp"
         android:orientation="horizontal"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:id="@+id/fragCarte"
 
         android:background="@drawable/rounded_corner">
 
-    </LinearLayout>
+    </FrameLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
