création de la carte avec Maps1Activity.java

--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -104,9 +104,7 @@
         android:orientation="horizontal"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/fragCarte"
-
-        android:background="@drawable/rounded_corner">
+        android:id="@+id/fragCarte">
 
     </FrameLayout>
 
