--- a/app/src/main/res/layout/fragment_map_.xml
+++ b/app/src/main/res/layout/fragment_map_.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Map_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <fragment
-        android:layout_width="match_parent"
-        android:layout_height="460dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:id="@+id/MY_MAP"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
-
-</FrameLayout>
+<fragment
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/map"
+android:name="com.google.android.gms.maps.SupportMapFragment"
+android:layout_width="match_parent"
+android:layout_height="460dp"
+android:layout_marginLeft="20dp"
+android:layout_marginRight="20dp"
+android:orientation="horizontal"
+tools:context=".Map_Fragment"
+tools:layout="@layout/activity_maps1" />
