--- a/app/src/main/res/layout/fragment_map_.xml
+++ b/app/src/main/res/layout/fragment_map_.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<fragment
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/map"
-android:name="com.google.android.gms.maps.SupportMapFragment"
-android:layout_width="match_parent"
-android:layout_height="460dp"
-android:layout_marginLeft="20dp"
-android:layout_marginRight="20dp"
-android:orientation="horizontal"
-tools:context=".Map_Fragment"
-tools:layout="@layout/activity_maps1" />
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/map"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:layout_width="match_parent"
+    android:layout_height="460dp"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
+    android:orientation="horizontal"
+    app:cornerRadius="@dimen/cornerRadius"
+    tools:context=".Map_Fragment"
+    tools:layout="@layout/activity_maps1" />
