--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,7 +26,7 @@
     <color name="style5">@color/secondary</color>
     <color name="style6">@color/greyDark</color>
     <color name="Style7">@color/primary</color>
-
+    <color name="transparentWhite">#80FFFFFF</color>
 
 
 </resources>
