abandon du fragment pour la galerie

--- a/app/src/main/res/layout/activity_gallery_foodies.xml
+++ b/app/src/main/res/layout/activity_gallery_foodies.xml
@@ -90,40 +90,65 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:stretchColumns="0,1"
+        android:paddingStart="10dp"
+
         >
 
         <TableRow
             android:layout_width="fill_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <FrameLayout
+            android:id="@+id/fragment_container_view1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-            android:orientation="vertical"
-            android:layout_marginHorizontal="20dp"
+            />
+        <FrameLayout
+            android:id="@+id/fragment_container_view2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-            android:background="@drawable/rounded_corner"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="10dp"
-            android:backgroundTint="#C4F4DE" >
+            />
 
-        </LinearLayout>
+
 
         <!-- BALISE -->
         </TableRow>
         <TableRow
             android:layout_width="fill_parent">
             <!-- BALISE -->
+            <FrameLayout
+                android:id="@+id/fragment_container_view3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
 
-            <!-- BALISE -->
+            <FrameLayout
+            android:id="@+id/fragment_container_view4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            />
+
         </TableRow>
 
         <TableRow
             android:layout_width="fill_parent">
-            <!-- BALISE -->
+            <FrameLayout
+                android:id="@+id/fragment_container_view5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
 
-            <!-- BALISE -->
+            <FrameLayout
+                android:id="@+id/fragment_container_view6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                />
         </TableRow>
 
 
@@ -133,22 +158,7 @@
 
     </TableLayout>
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="2"
-        android:isScrollContainer="true"
-        android:rowCount="3"
-        android:orientation="horizontal"
-        android:layout_margin="20dp">
 
-        <androidx.fragment.app.FragmentContainerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/fragment_container_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </GridLayout>
 
 
 </LinearLayout>
