--- a/app/src/main/res/layout/fragment_u_i_component_for_gallery.xml
+++ b/app/src/main/res/layout/fragment_u_i_component_for_gallery.xml
@@ -3,15 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
     android:layout_height="200dp"
-    android:backgroundTint="@color/white"
+    android:backgroundTint="#00000000"
     android:background="@drawable/rounded_corner"
-    tools:context=".UIComponentForGallery">
+    tools:context=".UIComponentForGallery"
+    android:padding="10dp"
 
-    <!-- TODO: Update blank fragment layout -->
+    >
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:backgroundTint="#80FFFFFF"
+        android:background="@drawable/rounded_corner"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
