--- a/app/src/main/res/layout/activity_gallery_foodies.xml
+++ b/app/src/main/res/layout/activity_gallery_foodies.xml
@@ -26,7 +26,7 @@
             android:orientation="vertical">
             <ImageView
                 android:layout_width="200dp"
-                android:id="@+id/imalogomap1"
+                android:id="@+id/home"
                 android:layout_height="70dp"
                 app:srcCompat="@drawable/logov2" />
 
