--- a/app/src/main/res/layout/activity_gallery_photo.xml
+++ b/app/src/main/res/layout/activity_gallery_photo.xml
@@ -42,11 +42,7 @@
                 android:textColor="@color/secondary"
                 android:textSize="18sp"
                 />
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="galerie photo activité" />
+
 
         </LinearLayout>
         <LinearLayout
@@ -70,5 +66,92 @@
 
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/rounded_corner"
+        android:backgroundTint="#C4F4DE"
+        android:gravity="center"
+        android:onClick="onClick"
+        android:orientation="horizontal"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/style4"
+            android:text="Photo"
+            android:textColor="@color/style4"
+
+            android:textSize="@dimen/style4" />
+
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="FoodieName"
+            android:fontFamily="@font/style3"
+            android:textSize="@dimen/style3"
+            android:textColor="@color/style3"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:layout_marginHorizontal="20dp"
+
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/photoFoodieCaptured"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/shape_of_gallery"
+            app:srcCompat="@drawable/foodie_captured_exemple" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="50dp"
+            android:onClick="onClick"
+
+            android:padding="10dp"
+
+            android:text="Retour"
+
+            android:textColor="@color/style1"
+            android:fontFamily="@font/style1"
+            android:textSize="@dimen/style1"
+
+            app:cornerRadius="@dimen/cornerRadius"
+            app:strokeColor="@color/primary"
+            app:strokeWidth="@dimen/stroke" />
+    </LinearLayout>
+
 
 </LinearLayout>
