--- a/app/src/main/res/layout/activity_gallery_foodies.xml
+++ b/app/src/main/res/layout/activity_gallery_foodies.xml
@@ -28,6 +28,7 @@
                 android:layout_width="200dp"
                 android:id="@+id/home"
                 android:layout_height="70dp"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/logov2" />
 
             <TextView
