utilisation des preferences dans ManageFoodiesCaptured : fonctioonnelle,

--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -158,6 +158,7 @@
 
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/ananasImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
@@ -168,6 +169,7 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/avocatImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
@@ -178,6 +180,7 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/bananeImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
@@ -188,6 +191,7 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/pastequeImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
@@ -198,6 +202,7 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/mangueImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
@@ -208,6 +213,7 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/pommesImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
