premiere version de PhotoActivity

--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -42,7 +42,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:text="200XP"
-            android:textSize="48px"></TextView>
+            android:textSize="48px"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -54,6 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:onClick="onClick"
+            android:id="@+id/menu"
             app:srcCompat="@drawable/menu" />
     </LinearLayout>
     </LinearLayout>
@@ -118,7 +119,7 @@
             android:textColor="@color/style4"
             android:fontFamily="@font/style4"
             android:textSize="@dimen/style4"
-            ></TextView>
+            />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
@@ -171,7 +172,6 @@
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:id="@+id/ananas_black"
             android:onClick="onClick"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/ananas_black">
@@ -185,7 +185,6 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onClick"
-            android:id="@+id/avocat_black"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/avocat_black">
 
@@ -198,7 +197,6 @@
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onClick"
-            android:id="@+id/banane_black"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/banane_black">
 
@@ -210,7 +208,6 @@
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:id="@+id/pasteque_black"
             android:onClick="onClick"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/pasteque_black">
@@ -223,7 +220,6 @@
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:id="@+id/mangue_black"
             android:onClick="onClick"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/mangue_black">
@@ -236,8 +232,6 @@
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:id="@+id/pomme_black"
-
             android:onClick="onClick"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/pommes_black">
