--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -8,9 +8,152 @@
     android:background="@drawable/fond_menu"
     tools:context=".PhotoActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="appareil photo activité" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="horizontal"
+            android:baselineAligned="false">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:layout_weight="2"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="200dp"
+                    android:id="@+id/logo"
+                    android:onClick="onClick"
+                    android:layout_height="70dp"
+                    app:srcCompat="@drawable/logov2" />
+
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_corner"
+                    android:fontFamily="@font/style5"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/score_initial"
+                    android:textColor="@color/secondary"
+                    android:textSize="18sp"
+                    />
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+
+                android:gravity="end" >
+                <ImageView
+                    android:id="@+id/menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:onClick="onClick"
+                    app:srcCompat="@drawable/menu" />
+
+
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/rounded_corner"
+            android:backgroundTint="#C4F4DE"
+            android:gravity="center"
+            android:onClick="onClick"
+            android:orientation="horizontal"
+            android:paddingHorizontal="5dp"
+            android:paddingVertical="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/style4"
+                android:text="Photo"
+                android:textColor="@color/style4"
+
+                android:textSize="@dimen/style4" />
+
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Photo prise : "
+                android:fontFamily="@font/style3"
+                android:textSize="@dimen/style3"
+                android:textColor="@color/style3"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+
+            android:layout_height="450dp"
+            android:layout_marginHorizontal="20dp"
+
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/photoFoodieCaptured"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/shape_of_gallery"
+                app:srcCompat="@drawable/foodie_captured_exemple" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="50dp"
+                android:onClick="onClick"
+
+                android:padding="10dp"
+
+                android:text="prendre photo"
+
+                android:textColor="@color/style1"
+                android:fontFamily="@font/style1"
+                android:textSize="@dimen/style1"
+
+                app:cornerRadius="@dimen/cornerRadius"
+                app:strokeColor="@color/primary"
+                app:strokeWidth="@dimen/stroke" />
+        </LinearLayout>
+
+
+
 </LinearLayout>
