--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
                 android:padding="5dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/score_initial"
+                android:id="@+id/points"
                 android:textColor="@color/secondary"
                 android:textSize="18sp"
                 />
