--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -27,22 +27,25 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/logo"
+            android:id="@+id/home"
             android:layout_width="200dp"
             android:layout_height="70dp"
             android:onClick="onClick"
             app:srcCompat="@drawable/logov2" />
 
         <TextView
-            android:id="@+id/text200xp"
+            android:id="@+id/points"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner"
-            android:backgroundTint="@color/transparentWhite"
             android:gravity="center"
             android:padding="5dp"
-            android:text="200XP"
-            android:textSize="48px"/>
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/style5"
+            android:textColor="@color/style5"
+            android:textSize="@dimen/style5"
+            android:text="@string/score_initial"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
