--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -39,16 +39,17 @@
                 app:srcCompat="@drawable/logov2" />
 
             <TextView
+                android:id="@+id/points"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_corner"
-                android:fontFamily="@font/style5"
                 android:gravity="center"
                 android:padding="5dp"
                 android:layout_marginTop="5dp"
+                android:fontFamily="@font/style5"
+                android:textColor="@color/style5"
+                android:textSize="@dimen/style5"
                 android:text="@string/score_initial"
-                android:textColor="@color/secondary"
-                android:textSize="18sp"
                 />
 
 
