jeu complete et gestion des points

--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -144,7 +144,7 @@
 
                 android:padding="10dp"
 
-                android:text="prendre photo"
+                android:text="retour"
 
                 android:textColor="@color/style1"
                 android:fontFamily="@font/style1"
