Création du service de localisation

--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -150,6 +150,7 @@
         android:fontFamily="@font/style6"
         android:textSize="@dimen/style6"
         android:layout_marginLeft="23dp"
+        android:id="@+id/textviewR"
 
         android:textAlignment="center"
         android:paddingVertical="5dp"
