--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
             android:orientation="vertical">
             <ImageView
             android:layout_width="200dp"
-            android:id="@+id/imalogomap1"
+            android:id="@+id/home"
+                android:onClick="onClick"
             android:layout_height="70dp"
             app:srcCompat="@drawable/logov2" />
 
