--- a/app/src/main/res/layout/activity_photo_api_arcore.xml
+++ b/app/src/main/res/layout/activity_photo_api_arcore.xml
@@ -5,7 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".augmentedimage.AugmentedImageActivity">
 
-
+    <TextureView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="14"
+        android:id="@+id/texture"/>
 
             <Button
                 android:id="@+id/close"
