Poistionnement du cercle, Class SettingsActivity.java, et adpatation

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -175,6 +175,44 @@
     </LinearLayout>
 
 
+
+    <LinearLayout
+        android:id="@+id/settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_margin="20dp"
+        android:background="@drawable/rounded_corner"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="10dp"
+        android:backgroundTint="#C4F4DE"
+        android:onClick="onClick"
+        >
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/img_ico_green" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:fontFamily="@font/style4"
+            android:textColor="@color/style4"
+            android:textSize="@dimen/style4"
+            android:text="@string/settings" />
+
+
+    </LinearLayout>
+
+
+
+
+
 </LinearLayout>
 
 
